--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "antd": "^4.23.1",
+    "draft-js": "^0.11.7",
+    "lodash": "^4.17.20",
     "next": "12.3.0",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "sass": "^1.54.9"
   },
   "devDependencies": {
