--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-google-login": "^5.2.2",
     "sass": "^1.54.9"
   },
   "devDependencies": {
